--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -1,16 +1,17 @@
 name: resumen_mobile
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.2 <4.0.0'
+  sdk: ">=3.3.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.0.1
   google_fonts: ^6.2.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -20,5 +21,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  assets: 
+  assets:
     - assets/images/
