add ClipPath, animated images and ttf to login

--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -21,6 +21,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  fonts:
+    - family: PoetsenOne
+      fonts:
+        - asset: fonts/PoetsenOne-Regular.ttf
   assets:
     - assets/images/
