--- a/Back/resumenAIbackend/package.json
+++ b/Back/resumenAIbackend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "whisper": "^0.3.3"
   }
 }
