--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   go_router: ^14.0.1
   google_fonts: ^6.2.1
   http: ^1.2.1
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_lints: ^3.0.0
