--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_pdfview: ^1.3.2
   flutter_rating_bar: ^4.0.1
   flutter_riverpod: ^2.5.1
   go_router: ^14.0.1
