--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_pdfview: ^1.3.2
   flutter_rating_bar: ^4.0.1
   flutter_riverpod: ^2.5.1
   go_router: ^14.0.1
-  google_fonts: ^6.2.1
-  http: ^1.2.1
+  google_fonts: ^4.0.4
+  http: ^0.13.6
+  syncfusion_flutter_pdfviewer: ^20.3.46
   url_launcher: ^6.0.20
 
 dev_dependencies:
