--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.3.2 <4.0.0"
 
 dependencies:
+  curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
