--- a/Front (Mobile)/resumen_mobile/pubspec.yaml
+++ b/Front (Mobile)/resumen_mobile/pubspec.yaml
@@ -15,8 +15,17 @@ dependencies:
   go_router: ^14.0.1
   google_fonts: ^4.0.4
   http: ^0.13.6
+  icons_launcher: ^2.1.7
   syncfusion_flutter_pdfviewer: ^20.3.46
   url_launcher: ^6.0.20
+
+icons_launcher:
+  image_path: 'assets/images/iconLuncher.png'
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
 
 dev_dependencies:
   flutter_lints: ^3.0.0
